[package]
name = "mdbook-classy"
version = "0.2.0"

authors = ["Doug Bradshaw <dhbradshaw@gmail.com>", "ucw <wuxianucw@outlook.com>"]
categories = ["command-line-utilities"]
description = "An mdbook preprocessor for adding html-css classes to markdown."
edition = "2021"
exclude = [
    "examples/*",
]
homepage = "https://github.com/reviewable/mdbook-classy"
keywords = ["mdbook", "classy", "markdown", "commonmark","css"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/reviewable/mdbook-classy"

[dependencies]
clap = "4.1.14"
mdbook = ">=0.4.0, <=0.4.36" # mdbook requires pulldown-cmark 0.10 since 0.4.37
pulldown-cmark = { version = "0.9.3", default-features = false }
pulldown-cmark-to-cmark = "11.2.0" # pulldown-cmark-to-cmark requires pulldown-cmark 0.9
serde_json = "1.0.96"
